# crewai-rag-deep-dive

./: .gitignore  README.md  pyproject.toml
1_pdf/: 1_crew.py  2_crew_custom_model_and_embeddings.py  crew.py
2_youtube_and_web/: crew.py  main.py
2_youtube_and_web/tools/: AddVideoToVectorDBTool.py  FetchLatestVideosFromYouTubeChannelTool.py
